y.output

0: shift/reduce conflict (shift 3(0), red'n 1(0)) on MODULE
state 0
	$accept: .modules $end 
	modules: .    (1)

	MODULE  shift 3
	.  reduce 1 (src line 71)

	modules  goto 1
	module  goto 2

state 1
	$accept:  modules.$end 
	modules:  modules.module 

	$end  accept
	MODULE  shift 3
	.  error

	module  goto 4

state 2
	modules:  module.    (2)

	.  reduce 2 (src line 78)


state 3
	module:  MODULE.IDENT terms compstmt 

	IDENT  shift 5
	.  error


state 4
	modules:  modules module.    (3)

	.  reduce 3 (src line 85)


state 5
	module:  MODULE IDENT.terms compstmt 

	';'  shift 8
	'\n'  shift 9
	.  error

	terms  goto 6
	term  goto 7

 6: reduce/reduce conflict  (red'ns 131 and 7) on $end
 6: reduce/reduce conflict  (red'ns 131 and 7) on MODULE
6: shift/reduce conflict (shift 8(0), red'n 7(0)) on ';'
6: shift/reduce conflict (shift 9(0), red'n 7(0)) on '\n'
state 6
	module:  MODULE IDENT terms.compstmt 
	terms:  terms.term 
	opt_terms: .    (131)
	stmts: .    (7)

	$end  reduce 7 (src line 111)
	MODULE  reduce 7 (src line 111)
	';'  shift 8
	'\n'  shift 9
	.  reduce 131 (src line 737)

	compstmt  goto 10
	stmts  goto 13
	terms  goto 14
	opt_terms  goto 12
	term  goto 11

state 7
	terms:  term.    (133)

	.  reduce 133 (src line 742)


state 8
	term:  ';'.    (135)

	.  reduce 135 (src line 750)


state 9
	term:  '\n'.    (136)

	.  reduce 136 (src line 753)


state 10
	module:  MODULE IDENT terms compstmt.    (4)

	.  reduce 4 (src line 95)


 11: reduce/reduce conflict  (red'ns 133 and 134) on $end
 11: reduce/reduce conflict  (red'ns 133 and 134) on IDENT
 11: reduce/reduce conflict  (red'ns 133 and 134) on NUMBER
 11: reduce/reduce conflict  (red'ns 133 and 134) on STRING
 11: reduce/reduce conflict  (red'ns 133 and 134) on FUNC
 11: reduce/reduce conflict  (red'ns 133 and 134) on RETURN
 11: reduce/reduce conflict  (red'ns 133 and 134) on THROW
 11: reduce/reduce conflict  (red'ns 133 and 134) on IF
 11: reduce/reduce conflict  (red'ns 133 and 134) on FOR
 11: reduce/reduce conflict  (red'ns 133 and 134) on TRUE
 11: reduce/reduce conflict  (red'ns 133 and 134) on FALSE
 11: reduce/reduce conflict  (red'ns 133 and 134) on NIL
 11: reduce/reduce conflict  (red'ns 133 and 134) on MODULE
 11: reduce/reduce conflict  (red'ns 133 and 134) on TRY
 11: reduce/reduce conflict  (red'ns 133 and 134) on BREAK
 11: reduce/reduce conflict  (red'ns 133 and 134) on CONTINUE
 11: reduce/reduce conflict  (red'ns 133 and 134) on SWITCH
 11: reduce/reduce conflict  (red'ns 133 and 134) on GO
 11: reduce/reduce conflict  (red'ns 133 and 134) on MAKE
 11: reduce/reduce conflict  (red'ns 133 and 134) on OPCHAN
 11: reduce/reduce conflict  (red'ns 133 and 134) on ARRAYLIT
 11: reduce/reduce conflict  (red'ns 133 and 134) on NULL
 11: reduce/reduce conflict  (red'ns 133 and 134) on WHILE
 11: reduce/reduce conflict  (red'ns 133 and 134) on TERNARY
 11: reduce/reduce conflict  (red'ns 133 and 134) on TYPECAST
 11: reduce/reduce conflict  (red'ns 133 and 134) on ','
 11: reduce/reduce conflict  (red'ns 133 and 134) on '-'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '*'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '{'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '!'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '^'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '&'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '('
 11: reduce/reduce conflict  (red'ns 133 and 134) on '['
 11: reduce/reduce conflict  (red'ns 133 and 134) on ';'
 11: reduce/reduce conflict  (red'ns 133 and 134) on '\n'
state 11
	terms:  term.    (133)
	terms:  terms term.    (134)

	.  reduce 133 (src line 742)


state 12
	compstmt:  opt_terms.    (5)
	stmts:  opt_terms.stmt 
	exprs: .    (50)

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	RETURN  shift 20
	THROW  shift 21
	IF  shift 50
	FOR  shift 23
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	TRY  shift 25
	BREAK  shift 18
	CONTINUE  shift 19
	SWITCH  shift 26
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	WHILE  shift 24
	TERNARY  shift 39
	TYPECAST  shift 47
	','  reduce 50 (src line 325)
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  reduce 5 (src line 102)

	stmt  goto 15
	stmt_if  goto 22
	expr  goto 16
	exprs  goto 49
	expr_many  goto 17

state 13
	compstmt:  stmts.opt_terms 
	stmts:  stmts.terms stmt 
	opt_terms: .    (131)

	';'  shift 8
	'\n'  shift 9
	.  reduce 131 (src line 737)

	terms  goto 52
	opt_terms  goto 51
	term  goto 7

14: shift/reduce conflict (shift 8(0), red'n 132(0)) on ';'
14: shift/reduce conflict (shift 9(0), red'n 132(0)) on '\n'
state 14
	opt_terms:  terms.    (132)
	terms:  terms.term 

	';'  shift 8
	'\n'  shift 9
	.  reduce 132 (src line 738)

	term  goto 53

state 15
	stmts:  opt_terms stmt.    (8)

	.  reduce 8 (src line 115)


16: shift/reduce conflict (shift 64(6), red'n 45(0)) on EQEQ
16: shift/reduce conflict (shift 54(1), red'n 45(0)) on '='
state 16
	stmt:  expr.'=' expr 
	stmt:  expr.    (25)
	expr_many:  expr.    (45)
	exprs:  expr.    (51)
	expr:  expr.'.' IDENT 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.POW expr 
	expr:  expr.SHIFTLEFT expr 
	expr:  expr.SHIFTRIGHT expr 
	expr:  expr.EQEQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.'>' expr 
	expr:  expr.GE expr 
	expr:  expr.'<' expr 
	expr:  expr.LE expr 
	expr:  expr.PLUSEQ expr 
	expr:  expr.MINUSEQ expr 
	expr:  expr.MULEQ expr 
	expr:  expr.DIVEQ expr 
	expr:  expr.ANDEQ expr 
	expr:  expr.OREQ expr 
	expr:  expr.PLUSPLUS 
	expr:  expr.MINUSMINUS 
	expr:  expr.'|' expr 
	expr:  expr.OROR expr 
	expr:  expr.'&' expr 
	expr:  expr.ANDAND expr 
	expr:  expr.'(' exprs VARARG ')' 
	expr:  expr.'(' exprs ')' 
	expr:  expr.'[' expr ']' 
	expr:  expr.'[' expr ':' expr ']' 
	expr:  expr.'[' expr ':' ']' 
	expr:  expr.'[' ':' expr ']' 
	expr:  expr.OPCHAN expr 

	EQEQ  shift 64
	NEQ  shift 65
	GE  shift 67
	LE  shift 69
	OROR  shift 79
	ANDAND  shift 81
	PLUSEQ  shift 70
	MINUSEQ  shift 71
	MULEQ  shift 72
	DIVEQ  shift 73
	ANDEQ  shift 74
	OREQ  shift 75
	PLUSPLUS  shift 76
	MINUSMINUS  shift 77
	POW  shift 61
	SHIFTLEFT  shift 62
	SHIFTRIGHT  shift 63
	OPCHAN  shift 84
	'='  shift 54
	','  reduce 51 (src line 329)
	'>'  shift 66
	'<'  shift 68
	'+'  shift 56
	'-'  shift 57
	'*'  shift 58
	'/'  shift 59
	'%'  shift 60
	'.'  shift 55
	'&'  shift 80
	'('  shift 82
	'['  shift 83
	'|'  shift 78
	.  reduce 25 (src line 199)


state 17
	stmt:  expr_many.'=' expr_many 
	stmt:  expr_many.EQEQ expr_many 

	EQEQ  shift 86
	'='  shift 85
	.  error


state 18
	stmt:  BREAK.    (13)

	.  reduce 13 (src line 139)


state 19
	stmt:  CONTINUE.    (14)

	.  reduce 14 (src line 144)


state 20
	stmt:  RETURN.exprs 
	exprs: .    (50)

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  reduce 50 (src line 325)

	expr  goto 88
	exprs  goto 87

state 21
	stmt:  THROW.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 89

state 22
	stmt:  stmt_if.    (17)

	.  reduce 17 (src line 159)


state 23
	stmt:  FOR.EACH IDENT IN expr '{' compstmt '}' 
	stmt:  FOR.IDENT '=' expr TO expr '{' compstmt '}' 
	stmt:  FOR.IDENT EQEQ expr TO expr '{' compstmt '}' 

	IDENT  shift 91
	EACH  shift 90
	.  error


state 24
	stmt:  WHILE.expr '{' compstmt '}' 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 92

 25: reduce/reduce conflict  (red'ns 131 and 7) on CATCH
25: shift/reduce conflict (shift 8(0), red'n 7(0)) on ';'
25: shift/reduce conflict (shift 9(0), red'n 7(0)) on '\n'
state 25
	stmt:  TRY.compstmt CATCH compstmt '}' 
	opt_terms: .    (131)
	stmts: .    (7)

	CATCH  reduce 7 (src line 111)
	';'  shift 8
	'\n'  shift 9
	.  reduce 131 (src line 737)

	compstmt  goto 93
	stmts  goto 13
	terms  goto 14
	opt_terms  goto 12
	term  goto 7

state 26
	stmt:  SWITCH.expr ':' stmt_cases '}' 
	stmt:  SWITCH.':' stmt_cases '}' 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	':'  shift 95
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 94

27: shift/reduce conflict (shift 96(0), red'n 54(5)) on '('
27: shift/reduce conflict (shift 97(0), red'n 54(5)) on '['
state 27
	expr:  IDENT.    (54)
	expr:  IDENT.'(' exprs VARARG ')' 
	expr:  IDENT.'(' exprs ')' 
	expr:  IDENT.'[' expr ']' 
	expr:  IDENT.'[' expr ':' expr ']' 
	expr:  IDENT.'[' expr ':' ']' 
	expr:  IDENT.'[' ':' expr ']' 

	'('  shift 96
	'['  shift 97
	.  reduce 54 (src line 342)


state 28
	expr:  NUMBER.    (55)

	.  reduce 55 (src line 348)


state 29
	expr:  '-'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 98

state 30
	expr:  '!'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 99

state 31
	expr:  '^'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 100

state 32
	expr:  '&'.IDENT 
	expr:  '&'.expr '.' IDENT 

	IDENT  shift 101
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 102

state 33
	expr:  '*'.IDENT 
	expr:  '*'.expr '.' IDENT 

	IDENT  shift 103
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 104

state 34
	expr:  STRING.    (63)

	.  reduce 63 (src line 388)


state 35
	expr:  TRUE.    (64)

	.  reduce 64 (src line 393)


state 36
	expr:  FALSE.    (65)

	.  reduce 65 (src line 398)


state 37
	expr:  NIL.    (66)

	.  reduce 66 (src line 403)


state 38
	expr:  NULL.    (67)

	.  reduce 67 (src line 408)


state 39
	expr:  TERNARY.expr ',' expr ',' expr ')' 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 105

state 40
	expr:  FUNC.'(' expr_idents ')' opt_terms compstmt '}' 
	expr:  FUNC.'(' IDENT VARARG ')' opt_terms compstmt '}' 
	expr:  FUNC.IDENT '(' expr_idents ')' opt_terms compstmt '}' 
	expr:  FUNC.IDENT '(' IDENT VARARG ')' opt_terms compstmt '}' 

	IDENT  shift 107
	'('  shift 106
	.  error


41: shift/reduce conflict (shift 8(0), red'n 131(0)) on ';'
41: shift/reduce conflict (shift 9(0), red'n 131(0)) on '\n'
state 41
	expr:  '['.opt_terms exprs opt_terms ']' 
	expr:  '['.opt_terms exprs ',' opt_terms ']' 
	opt_terms: .    (131)

	';'  shift 8
	'\n'  shift 9
	.  reduce 131 (src line 737)

	terms  goto 14
	opt_terms  goto 108
	term  goto 7

42: shift/reduce conflict (shift 8(0), red'n 131(0)) on ';'
42: shift/reduce conflict (shift 9(0), red'n 131(0)) on '\n'
state 42
	expr:  '{'.opt_terms expr_pairs opt_terms '}' 
	expr:  '{'.opt_terms expr_pairs ',' opt_terms '}' 
	opt_terms: .    (131)

	';'  shift 8
	'\n'  shift 9
	.  reduce 131 (src line 737)

	terms  goto 14
	opt_terms  goto 109
	term  goto 7

state 43
	expr:  '('.expr ')' 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 110

state 44
	expr:  GO.IDENT '(' exprs VARARG ')' 
	expr:  GO.IDENT '(' exprs ')' 
	expr:  GO.expr '(' exprs VARARG ')' 
	expr:  GO.expr '(' exprs ')' 

	IDENT  shift 111
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 112

state 45
	expr:  MAKE.typ 
	expr:  MAKE.CHAN 
	expr:  MAKE.CHAN '(' expr ')' 
	expr:  MAKE.'(' expr ')' 
	expr:  MAKE.'(' expr ',' expr ')' 

	IDENT  shift 116
	CHAN  shift 114
	'('  shift 115
	.  error

	typ  goto 113

state 46
	expr:  ARRAYLIT.'(' expr ')' 
	expr:  ARRAYLIT.'(' expr ',' expr ')' 

	'('  shift 117
	.  error


state 47
	expr:  TYPECAST.typ '(' expr ')' 

	IDENT  shift 116
	.  error

	typ  goto 118

state 48
	expr:  OPCHAN.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 119

state 49
	expr_many:  exprs.',' opt_terms expr 
	expr_many:  exprs.',' opt_terms IDENT 
	exprs:  exprs.',' opt_terms expr 
	exprs:  exprs.',' opt_terms IDENT 

	','  shift 120
	.  error


state 50
	stmt_if:  IF.expr '{' compstmt stmt_elsifs ELSE compstmt '}' 
	stmt_if:  IF.expr '{' compstmt stmt_elsifs '}' 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 121

state 51
	compstmt:  stmts opt_terms.    (6)

	.  reduce 6 (src line 106)


state 52
	stmts:  stmts terms.stmt 
	opt_terms:  terms.    (132)
	terms:  terms.term 
	exprs: .    (50)

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	RETURN  shift 20
	THROW  shift 21
	IF  shift 50
	FOR  shift 23
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	TRY  shift 25
	BREAK  shift 18
	CONTINUE  shift 19
	SWITCH  shift 26
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	WHILE  shift 24
	TERNARY  shift 39
	TYPECAST  shift 47
	','  reduce 50 (src line 325)
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	';'  shift 8
	'\n'  shift 9
	.  reduce 132 (src line 738)

	stmt  goto 122
	stmt_if  goto 22
	expr  goto 16
	exprs  goto 49
	expr_many  goto 17
	term  goto 53

state 53
	terms:  terms term.    (134)

	.  reduce 134 (src line 745)


state 54
	stmt:  expr '='.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 123

state 55
	expr:  expr '.'.IDENT 

	IDENT  shift 124
	.  error


state 56
	expr:  expr '+'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 125

state 57
	expr:  expr '-'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 126

state 58
	expr:  expr '*'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 127

state 59
	expr:  expr '/'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 128

state 60
	expr:  expr '%'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 129

state 61
	expr:  expr POW.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 130

state 62
	expr:  expr SHIFTLEFT.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 131

state 63
	expr:  expr SHIFTRIGHT.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 132

state 64
	expr:  expr EQEQ.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 133

state 65
	expr:  expr NEQ.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 134

state 66
	expr:  expr '>'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 135

state 67
	expr:  expr GE.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 136

state 68
	expr:  expr '<'.expr 

	IDENT  shift 27
	NUMBER  shift 28
	STRING  shift 34
	FUNC  shift 40
	TRUE  shift 35
	FALSE  shift 36
	NIL  shift 37
	GO  shift 44
	MAKE  shift 45
	OPCHAN  shift 48
	ARRAYLIT  shift 46
	NULL  shift 38
	TERNARY  shift 39
	TYPECAST  shift 47
	'-'  shift 29
	'*'  shift 33
	'{'  shift 42
	'!'  shift 30
	'^'  shift 31
	'&'  shift 32
	'('  shift 43
	'['  shift 41
	.  error

	expr  goto 137

state 69
	expr:  expr LE.expr 
